Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -47,11 +47,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 123,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:48:43.339492Z",
-     "start_time": "2019-03-21T01:48:43.325603Z"
+     "end_time": "2019-03-21T01:49:50.075425Z",
+     "start_time": "2019-03-21T01:49:50.061042Z"
     }
    },
    "outputs": [],
@@ -84,21 +84,30 @@
     "    for _ in range(num_episodes):\n",
     "        \n",
     "        list_of_state_in_eps = []\n",
+    "        list_of_reward_ineps = []\n",
     "        \n",
     "        observation    = env.reset()\n",
     "        list_of_state_in_eps.append(observation)\n",
     "        action_to_take = sample_policy(observation)\n",
     "        next_observation,reward,game_over,_ = env.step(action_to_take)\n",
+    "        list_of_reward_ineps.append(reward)\n",
     "        observation    = next_observation\n",
     "        \n",
     "        while not game_over: \n",
     "            list_of_state_in_eps.append(observation)\n",
     "            action_to_take = sample_policy(observation)\n",
     "            next_observation,reward,game_over,_ = env.step(action_to_take)\n",
+    "            list_of_reward_ineps.append(reward)\n",
     "            observation    = next_observation\n",
     "            \n",
+    "            if not game_over:\n",
+    "                list_of_state_in_eps.append(observation)\n",
+    "                        observation    = next_observation\n",
+    "\n",
     "            \n",
     "        print(list_of_state_in_eps)\n",
+    "        print(list_of_reward_ineps)\n",
+    "\n",
     "        sys.exit()\n",
     "        break\n",
     "            \n",
@@ -130,11 +139,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 124,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:48:43.810461Z",
-     "start_time": "2019-03-21T01:48:43.806509Z"
+     "end_time": "2019-03-21T01:49:50.541360Z",
+     "start_time": "2019-03-21T01:49:50.537884Z"
     },
     "code_folding": [
      0
@@ -152,11 +161,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 126,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:48:56.233692Z",
-     "start_time": "2019-03-21T01:48:56.227256Z"
+     "end_time": "2019-03-21T01:49:53.593109Z",
+     "start_time": "2019-03-21T01:49:53.588137Z"
     },
     "scrolled": false
    },
@@ -165,7 +174,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(13, 10, False), (15, 10, False), (20, 10, False)]\n"
+      "[(15, 10, False)]\n",
+      "[-1]\n"
      ]
     },
     {
