--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -47,11 +47,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 127,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:49:50.075425Z",
-     "start_time": "2019-03-21T01:49:50.061042Z"
+     "end_time": "2019-03-21T01:51:25.481631Z",
+     "start_time": "2019-03-21T01:51:25.465730Z"
     }
    },
    "outputs": [],
@@ -102,9 +102,10 @@
     "            \n",
     "            if not game_over:\n",
     "                list_of_state_in_eps.append(observation)\n",
-    "                        observation    = next_observation\n",
+    "                list_of_reward_ineps.append(reward)\n",
     "\n",
     "            \n",
+    "        \n",
     "        print(list_of_state_in_eps)\n",
     "        print(list_of_reward_ineps)\n",
     "\n",
@@ -139,11 +140,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 130,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:49:50.541360Z",
-     "start_time": "2019-03-21T01:49:50.537884Z"
+     "end_time": "2019-03-21T01:51:27.042306Z",
+     "start_time": "2019-03-21T01:51:27.038338Z"
     },
     "code_folding": [
      0
@@ -161,11 +162,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 144,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:49:53.593109Z",
-     "start_time": "2019-03-21T01:49:53.588137Z"
+     "end_time": "2019-03-21T01:52:20.331432Z",
+     "start_time": "2019-03-21T01:52:20.324014Z"
     },
     "scrolled": false
    },
@@ -174,7 +175,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(15, 10, False)]\n",
+      "[(15, 1, False)]\n",
       "[-1]\n"
      ]
     },
