Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -105,7 +105,9 @@
     "                list_of_reward_ineps.append(reward)\n",
     "\n",
     "            \n",
-    "        \n",
+    "        # loop over each state and reward \n",
+    "        for index in range(len(list_of_state_in_eps)):\n",
+    "            returns_count[list_of_state_in_eps[index]] = returns_count[list_of_state_in_eps[index]] + 1 if list_of_state_in_eps[index] in returns_count else 1\n",
     "        print(list_of_state_in_eps)\n",
     "        print(list_of_reward_ineps)\n",
     "\n",
