Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -47,11 +47,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 145,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:51:25.481631Z",
-     "start_time": "2019-03-21T01:51:25.465730Z"
+     "end_time": "2019-03-21T01:56:24.082767Z",
+     "start_time": "2019-03-21T01:56:24.069870Z"
     }
    },
    "outputs": [],
@@ -108,8 +108,12 @@
     "        # loop over each state and reward \n",
     "        for index in range(len(list_of_state_in_eps)):\n",
     "            returns_count[list_of_state_in_eps[index]] = returns_count[list_of_state_in_eps[index]] + 1 if list_of_state_in_eps[index] in returns_count else 1\n",
+    "            returns_sum[list_of_state_in_eps[index]]   = returns_sum[list_of_state_in_eps[index]]   + sum(list_of_reward_ineps[index:]) if list_of_state_in_eps[index] in returns_sum else sum(list_of_reward_ineps[index:])\n",
+    "        \n",
     "        print(list_of_state_in_eps)\n",
     "        print(list_of_reward_ineps)\n",
+    "        print(returns_count)\n",
+    "        print(returns_sum)\n",
     "\n",
     "        sys.exit()\n",
     "        break\n",
@@ -142,11 +146,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 146,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:51:27.042306Z",
-     "start_time": "2019-03-21T01:51:27.038338Z"
+     "end_time": "2019-03-21T01:56:24.663158Z",
+     "start_time": "2019-03-21T01:56:24.659687Z"
     },
     "code_folding": [
      0
@@ -164,11 +168,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 147,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:52:20.331432Z",
-     "start_time": "2019-03-21T01:52:20.324014Z"
+     "end_time": "2019-03-21T01:56:24.916451Z",
+     "start_time": "2019-03-21T01:56:24.910005Z"
     },
     "scrolled": false
    },
@@ -177,8 +181,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(15, 1, False)]\n",
-      "[-1]\n"
+      "[(15, 7, False), (18, 7, False)]\n",
+      "[0, -1]\n",
+      "defaultdict(<class 'float'>, {(15, 7, False): 1, (18, 7, False): 1})\n",
+      "defaultdict(<class 'float'>, {(15, 7, False): -1, (18, 7, False): -1})\n"
      ]
     },
     {
