Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -47,11 +47,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 154,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:56:24.082767Z",
-     "start_time": "2019-03-21T01:56:24.069870Z"
+     "end_time": "2019-03-21T01:59:16.294940Z",
+     "start_time": "2019-03-21T01:59:16.286379Z"
     }
    },
    "outputs": [],
@@ -81,7 +81,7 @@
     "    V = defaultdict(float)\n",
     "    \n",
     "    # start the loop\n",
-    "    for _ in range(num_episodes):\n",
+    "    for _ in range(30):\n",
     "        \n",
     "        list_of_state_in_eps = []\n",
     "        list_of_reward_ineps = []\n",
@@ -110,47 +110,23 @@
     "            returns_count[list_of_state_in_eps[index]] = returns_count[list_of_state_in_eps[index]] + 1 if list_of_state_in_eps[index] in returns_count else 1\n",
     "            returns_sum[list_of_state_in_eps[index]]   = returns_sum[list_of_state_in_eps[index]]   + sum(list_of_reward_ineps[index:]) if list_of_state_in_eps[index] in returns_sum else sum(list_of_reward_ineps[index:])\n",
     "        \n",
-    "        print(list_of_state_in_eps)\n",
-    "        print(list_of_reward_ineps)\n",
-    "        print(returns_count)\n",
-    "        print(returns_sum)\n",
-    "\n",
-    "        sys.exit()\n",
-    "        break\n",
+    "    print(list_of_state_in_eps)\n",
+    "    print(list_of_reward_ineps)\n",
+    "    print(returns_count)\n",
+    "    print(returns_sum)\n",
+    "    sys.exit()\n",
     "            \n",
-    "        if observation in returns_count: returns_count[observation] = returns_count[observation] + 1\n",
-    "        else:                            returns_count[observation] = 1\n",
-    "        \n",
-    "        if observation in returns_sum  : returns_sum[observation] = returns_sum[observation] + reward\n",
-    "        else:                            returns_sum[observation] = reward\n",
-    "            \n",
-    "        observation = next_observation\n",
-    "        \n",
-    "        while not game_over: \n",
-    "            action_to_take = sample_policy(observation)\n",
-    "            next_observation,reward,game_over,_ = env.step(action_to_take)\n",
-    "\n",
-    "            if observation in returns_count: returns_count[observation] = returns_count[observation] + 1\n",
-    "            else:                            returns_count[observation] = 1\n",
-    "\n",
-    "            if observation in returns_sum  : returns_sum[observation] = returns_sum[observation] + reward\n",
-    "            else:                            returns_sum[observation] = reward\n",
-    "\n",
-    "            observation = next_observation\n",
-    "\n",
-    "    for x in returns_sum.keys():\n",
-    "        V[x] = returns_sum[x]/returns_count[x]\n",
     "\n",
     "    return V    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 155,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:56:24.663158Z",
-     "start_time": "2019-03-21T01:56:24.659687Z"
+     "end_time": "2019-03-21T01:59:16.715364Z",
+     "start_time": "2019-03-21T01:59:16.712393Z"
     },
     "code_folding": [
      0
@@ -168,11 +144,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 156,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:56:24.916451Z",
-     "start_time": "2019-03-21T01:56:24.910005Z"
+     "end_time": "2019-03-21T01:59:17.039542Z",
+     "start_time": "2019-03-21T01:59:17.032587Z"
     },
     "scrolled": false
    },
@@ -181,10 +157,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(15, 7, False), (18, 7, False)]\n",
+      "[(16, 4, True), (13, 4, False)]\n",
       "[0, -1]\n",
-      "defaultdict(<class 'float'>, {(15, 7, False): 1, (18, 7, False): 1})\n",
-      "defaultdict(<class 'float'>, {(15, 7, False): -1, (18, 7, False): -1})\n"
+      "defaultdict(<class 'float'>, {(18, 10, False): 2, (20, 10, False): 2, (17, 9, False): 1, (19, 9, False): 1, (20, 1, False): 1, (15, 10, False): 4, (16, 10, False): 3, (16, 6, False): 1, (17, 3, False): 1, (19, 3, False): 1, (14, 5, False): 1, (12, 8, False): 1, (17, 8, False): 1, (14, 10, False): 2, (19, 10, False): 5, (12, 5, False): 2, (16, 5, False): 2, (15, 4, False): 2, (20, 5, False): 2, (19, 5, False): 1, (15, 7, False): 2, (13, 1, False): 1, (14, 1, False): 1, (19, 7, False): 1, (13, 10, False): 1, (17, 10, False): 1, (16, 4, False): 1, (20, 2, False): 1, (14, 7, False): 1, (21, 7, False): 2, (14, 9, False): 1, (21, 9, False): 1, (16, 4, True): 1, (13, 4, False): 1})\n",
+      "defaultdict(<class 'float'>, {(18, 10, False): -1, (20, 10, False): 1, (17, 9, False): -1, (19, 9, False): -1, (20, 1, False): 1, (15, 10, False): -4, (16, 10, False): -3, (16, 6, False): -1, (17, 3, False): -1, (19, 3, False): -1, (14, 5, False): -1, (12, 8, False): -1, (17, 8, False): -1, (14, 10, False): -2, (19, 10, False): -5, (12, 5, False): -2, (16, 5, False): -2, (15, 4, False): -2, (20, 5, False): 1, (19, 5, False): -1, (15, 7, False): 0, (13, 1, False): -1, (14, 1, False): -1, (19, 7, False): -1, (13, 10, False): -1, (17, 10, False): -1, (16, 4, False): -1, (20, 2, False): 0, (14, 7, False): 1, (21, 7, False): 2, (14, 9, False): 1, (21, 9, False): 1, (16, 4, True): -1, (13, 4, False): -1})\n"
      ]
     },
     {
