Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -47,11 +47,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 171,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:59:16.294940Z",
-     "start_time": "2019-03-21T01:59:16.286379Z"
+     "end_time": "2019-03-21T02:01:18.947279Z",
+     "start_time": "2019-03-21T02:01:18.936879Z"
     }
    },
    "outputs": [],
@@ -81,7 +81,7 @@
     "    V = defaultdict(float)\n",
     "    \n",
     "    # start the loop\n",
-    "    for _ in range(30):\n",
+    "    for _ in range(num_episodes):\n",
     "        \n",
     "        list_of_state_in_eps = []\n",
     "        list_of_reward_ineps = []\n",
@@ -110,23 +110,19 @@
     "            returns_count[list_of_state_in_eps[index]] = returns_count[list_of_state_in_eps[index]] + 1 if list_of_state_in_eps[index] in returns_count else 1\n",
     "            returns_sum[list_of_state_in_eps[index]]   = returns_sum[list_of_state_in_eps[index]]   + sum(list_of_reward_ineps[index:]) if list_of_state_in_eps[index] in returns_sum else sum(list_of_reward_ineps[index:])\n",
     "        \n",
-    "    print(list_of_state_in_eps)\n",
-    "    print(list_of_reward_ineps)\n",
-    "    print(returns_count)\n",
-    "    print(returns_sum)\n",
-    "    sys.exit()\n",
-    "            \n",
+    "    for xx in returns_sum.keys():\n",
+    "        V[xx] = returns_sum[xx]/returns_count[xx]\n",
     "\n",
     "    return V    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 172,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:59:16.715364Z",
-     "start_time": "2019-03-21T01:59:16.712393Z"
+     "end_time": "2019-03-21T02:01:19.162381Z",
+     "start_time": "2019-03-21T02:01:19.158925Z"
     },
     "code_folding": [
      0
@@ -144,35 +140,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:59:17.039542Z",
-     "start_time": "2019-03-21T01:59:17.032587Z"
+     "start_time": "2019-03-21T02:01:19.405Z"
     },
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(16, 4, True), (13, 4, False)]\n",
-      "[0, -1]\n",
-      "defaultdict(<class 'float'>, {(18, 10, False): 2, (20, 10, False): 2, (17, 9, False): 1, (19, 9, False): 1, (20, 1, False): 1, (15, 10, False): 4, (16, 10, False): 3, (16, 6, False): 1, (17, 3, False): 1, (19, 3, False): 1, (14, 5, False): 1, (12, 8, False): 1, (17, 8, False): 1, (14, 10, False): 2, (19, 10, False): 5, (12, 5, False): 2, (16, 5, False): 2, (15, 4, False): 2, (20, 5, False): 2, (19, 5, False): 1, (15, 7, False): 2, (13, 1, False): 1, (14, 1, False): 1, (19, 7, False): 1, (13, 10, False): 1, (17, 10, False): 1, (16, 4, False): 1, (20, 2, False): 1, (14, 7, False): 1, (21, 7, False): 2, (14, 9, False): 1, (21, 9, False): 1, (16, 4, True): 1, (13, 4, False): 1})\n",
-      "defaultdict(<class 'float'>, {(18, 10, False): -1, (20, 10, False): 1, (17, 9, False): -1, (19, 9, False): -1, (20, 1, False): 1, (15, 10, False): -4, (16, 10, False): -3, (16, 6, False): -1, (17, 3, False): -1, (19, 3, False): -1, (14, 5, False): -1, (12, 8, False): -1, (17, 8, False): -1, (14, 10, False): -2, (19, 10, False): -5, (12, 5, False): -2, (16, 5, False): -2, (15, 4, False): -2, (20, 5, False): 1, (19, 5, False): -1, (15, 7, False): 0, (13, 1, False): -1, (14, 1, False): -1, (19, 7, False): -1, (13, 10, False): -1, (17, 10, False): -1, (16, 4, False): -1, (20, 2, False): 0, (14, 7, False): 1, (21, 7, False): 2, (14, 9, False): 1, (21, 9, False): 1, (16, 4, True): -1, (13, 4, False): -1})\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "V_10k = mc_prediction(sample_policy, env, num_episodes=10000)\n",
     "plotting.plot_value_function(V_10k, title=\"10,000 Steps\")\n",
