Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -112,6 +112,67 @@
     "    for xx in returns_sum.keys():\n",
     "        V[xx] = returns_sum[xx]/returns_count[xx]\n",
     "\n",
+    "    return V    \n",
+    "\n",
+    "def mc_prediction_inc(policy, env, num_episodes, discount_factor=1.0):\n",
+    "    \"\"\"\n",
+    "    Monte Carlo prediction algorithm. Calculates the value function\n",
+    "    for a given policy using sampling.\n",
+    "    \n",
+    "    Args:\n",
+    "        policy: A function that maps an observation to action probabilities.\n",
+    "        env: OpenAI gym environment.\n",
+    "        num_episodes: Number of episodes to sample.\n",
+    "        discount_factor: Gamma discount factor.\n",
+    "    \n",
+    "    Returns:\n",
+    "        A dictionary that maps from state -> value.\n",
+    "        The state is a tuple and the value is a float.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Keeps track of sum and count of returns for each state to calculate an average. We could use an array to save all\n",
+    "    # returns (like in the book) but that's memory inefficient.\n",
+    "    returns_sum   = defaultdict(float)\n",
+    "    returns_count = defaultdict(float)\n",
+    "\n",
+    "    # The final value function\n",
+    "    V = defaultdict(float)\n",
+    "    \n",
+    "    # start the loop\n",
+    "    for _ in range(num_episodes):\n",
+    "        \n",
+    "        list_of_state_in_eps = []\n",
+    "        list_of_reward_ineps = []\n",
+    "        \n",
+    "        observation    = env.reset()\n",
+    "        list_of_state_in_eps.append(observation)\n",
+    "        action_to_take = sample_policy(observation)\n",
+    "        next_observation,reward,game_over,_ = env.step(action_to_take)\n",
+    "        list_of_reward_ineps.append(reward)\n",
+    "        observation    = next_observation\n",
+    "        \n",
+    "        while not game_over: \n",
+    "            list_of_state_in_eps.append(observation)\n",
+    "            action_to_take = sample_policy(observation)\n",
+    "            next_observation,reward,game_over,_ = env.step(action_to_take)\n",
+    "            list_of_reward_ineps.append(reward)\n",
+    "            observation    = next_observation\n",
+    "            \n",
+    "            if not game_over:\n",
+    "                list_of_state_in_eps.append(observation)\n",
+    "                list_of_reward_ineps.append(reward)\n",
+    "            \n",
+    "        # loop over each state and reward \n",
+    "        for index in range(len(list_of_state_in_eps)):\n",
+    "            returns_count[list_of_state_in_eps[index]] = returns_count[list_of_state_in_eps[index]] + 1 if list_of_state_in_eps[index] in returns_count else 1\n",
+    "            \n",
+    "            if list_of_state_in_eps[index] in V:\n",
+    "                V[list_of_state_in_eps[index]] = V[list_of_state_in_eps[index]]\n",
+    "            returns_sum[list_of_state_in_eps[index]]   = returns_sum[list_of_state_in_eps[index]]   + sum(list_of_reward_ineps[index:]) if list_of_state_in_eps[index] in returns_sum else sum(list_of_reward_ineps[index:])\n",
+    "        \n",
+    "    for xx in returns_sum.keys():\n",
+    "        V[xx] = returns_sum[xx]/returns_count[xx]\n",
+    "\n",
     "    return V    "
    ]
   },
