--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -203,14 +203,14 @@
     "        V[observation] = 0\n",
     "        action_to_take = sample_policy(observation)\n",
     "        next_observation,reward,game_over,_ = env.step(action_to_take)\n",
-    "        V[observation] = V[observation] + step_size*(reward - V[observation)\n",
+    "        V[observation] = V[observation] + step_size*(reward - V[observation])\n",
     "        observation    = next_observation\n",
     "        \n",
     "        while not game_over: \n",
-    "            list_of_state_in_eps.append(observation)\n",
+    "            V[observation] = 0 if not observation in V else V[observation]                           \n",
     "            action_to_take = sample_policy(observation)\n",
     "            next_observation,reward,game_over,_ = env.step(action_to_take)\n",
-    "            list_of_reward_ineps.append(reward)\n",
+    "            V[observation] = V[observation] + step_size*(reward - V[observation])\n",
     "            observation    = next_observation\n",
     "            \n",
     "            if not game_over:\n",
