--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -216,6 +216,37 @@
     "            if not game_over:\n",
     "                V[observation] = V[observation] + step_size*(reward - V[observation])\n",
     "            \n",
+    "    return V  \n",
+    "\n",
+    "def TD_zero(policy, env, num_episodes, discount_factor=1.0):\n",
+    "\n",
+    "    step_size = discount_factor\n",
+    "\n",
+    "    # The final value function\n",
+    "    V = defaultdict(float)\n",
+    "    \n",
+    "    # start the loop\n",
+    "    for _ in range(num_episodes):\n",
+    "        \n",
+    "        observation    = env.reset()\n",
+    "        V[observation] = 0\n",
+    "        action_to_take = sample_policy(observation)\n",
+    "        next_observation,reward,game_over,_ = env.step(action_to_take)\n",
+    "        \n",
+    "        V[next_observation] = 0 if not observation in V else V[next_observation] \n",
+    "        V[observation] = V[observation] + step_size*(reward +step_size*V[next_observation] - V[observation])\n",
+    "        observation    = next_observation\n",
+    "        \n",
+    "        while not game_over: \n",
+    "            V[observation] = 0 if not observation in V else V[observation]                           \n",
+    "            action_to_take = sample_policy(observation)\n",
+    "            next_observation,reward,game_over,_ = env.step(action_to_take)\n",
+    "            V[observation] = V[observation] + step_size*(reward - V[observation])\n",
+    "            observation    = next_observation\n",
+    "            \n",
+    "            if not game_over:\n",
+    "                V[observation] = V[observation] + step_size*(reward - V[observation])\n",
+    "            \n",
     "    return V  "
    ]
   },
