Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T00:55:58.605973Z",
-     "start_time": "2019-03-21T00:55:57.241458Z"
+     "end_time": "2019-03-21T22:21:21.118703Z",
+     "start_time": "2019-03-21T22:21:19.126374Z"
     }
    },
    "outputs": [],
@@ -33,11 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T00:56:00.437374Z",
-     "start_time": "2019-03-21T00:56:00.431424Z"
+     "end_time": "2019-03-21T22:21:21.140030Z",
+     "start_time": "2019-03-21T22:21:21.135567Z"
     }
    },
    "outputs": [],
@@ -47,12 +47,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T03:02:04.911057Z",
-     "start_time": "2019-03-21T03:02:04.884251Z"
-    }
+     "end_time": "2019-03-21T22:21:22.796408Z",
+     "start_time": "2019-03-21T22:21:22.765106Z"
+    },
+    "code_folding": [
+     0
+    ]
    },
    "outputs": [],
    "source": [
