Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -54,7 +54,9 @@
      "start_time": "2019-03-21T22:21:22.765106Z"
     },
     "code_folding": [
-     0
+     0,
+     58,
+     117
     ]
    },
    "outputs": [],
@@ -222,6 +224,35 @@
     "    return V  \n",
     "\n",
     "def TD_zero(policy, env, num_episodes, discount_factor=1.0):\n",
+    "\n",
+    "    step_size = discount_factor\n",
+    "\n",
+    "    # The final value function\n",
+    "    V = defaultdict(float)\n",
+    "    \n",
+    "    # start the loop\n",
+    "    for _ in range(num_episodes):\n",
+    "        \n",
+    "        observation    = env.reset()\n",
+    "        V[observation] = 0\n",
+    "        action_to_take = sample_policy(observation)\n",
+    "        next_observation,reward,game_over,_ = env.step(action_to_take)\n",
+    "        \n",
+    "        V[next_observation] = 0 if not next_observation in V else V[next_observation] \n",
+    "        V[observation] = V[observation] + step_size*(reward +step_size*V[next_observation] - V[observation])\n",
+    "        observation    = next_observation\n",
+    "        \n",
+    "        while not game_over: \n",
+    "            V[observation] = 0 if not observation in V else V[observation]                           \n",
+    "            action_to_take = sample_policy(observation)\n",
+    "            next_observation,reward,game_over,_ = env.step(action_to_take)\n",
+    "            V[next_observation] = 0 if not next_observation in V else V[next_observation] \n",
+    "            V[observation] = V[observation] + step_size*(reward +step_size*V[next_observation] - V[observation])\n",
+    "            observation    = next_observation\n",
+    "            \n",
+    "    return V  \n",
+    "\n",
+    "def TD_one(policy, env, num_episodes, discount_factor=1.0):\n",
     "\n",
     "    step_size = discount_factor\n",
     "\n",
