--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -269,6 +269,7 @@
     "        for _ in range(2):\n",
     "            action_to_take = sample_policy(observation)\n",
     "            next_observation,reward,game_over,_ = env.step(action_to_take)\n",
+    "            if game_over: break\n",
     "\n",
     "        V[next_observation] = 0 if not next_observation in V else V[next_observation] \n",
     "        V[observation] = V[observation] + step_size*(reward +step_size*V[next_observation] - V[observation])\n",
