Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -264,6 +264,7 @@
     "        \n",
     "        observation    = env.reset()\n",
     "        two_eps_list   = []\n",
+    "        two_rwd_list   = []\n",
     "        V[observation] = 0\n",
     "        \n",
     "        for _ in range(2):\n",
