--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -270,6 +270,8 @@
     "        for _ in range(2):\n",
     "            action_to_take = sample_policy(observation)\n",
     "            next_observation,reward,game_over,_ = env.step(action_to_take)\n",
+    "            two_eps_list.append(next_observation)\n",
+    "            two_rwd_list.append(reward)\n",
     "            if game_over: break\n",
     "\n",
     "        V[next_observation] = 0 if not next_observation in V else V[next_observation] \n",
