Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -273,6 +273,8 @@
     "            two_eps_list.append(next_observation)\n",
     "            two_rwd_list.append(reward)\n",
     "            if game_over: break\n",
+    "                \n",
+    "        print()\n",
     "\n",
     "        V[next_observation] = 0 if not next_observation in V else V[next_observation] \n",
     "        V[observation] = V[observation] + step_size*(reward +step_size*V[next_observation] - V[observation])\n",
