--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -317,14 +317,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-21T22:28:12.535031Z",
+     "start_time": "2019-03-21T22:28:12.529102Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(14, 5, False), (17, 5, False)]\n",
+      "[0, 0]\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Miniconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3275: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
    "source": [
-    "V_10k = mc_prediction(sample_policy, env, num_episodes=10000)\n",
+    "V_10k = TD_one(sample_policy, env, num_episodes=10000)\n",
     "plotting.plot_value_function(V_10k, title=\"10,000 Steps\")\n",
     "\n",
-    "V_500k = mc_prediction(sample_policy, env, num_episodes=500000)\n",
+    "V_500k = TD_one(sample_policy, env, num_episodes=500000)\n",
     "plotting.plot_value_function(V_500k, title=\"500,000 Steps\")"
    ]
   },
