Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -267,12 +267,15 @@
     "        V[observation] = 0\n",
     "        \n",
     "        for _ in range(2):\n",
+    "            print(observation)\n",
     "            action_to_take = sample_policy(observation)\n",
     "            next_observation,reward,game_over,_ = env.step(action_to_take)\n",
     "            two_rwd_list.append(reward)\n",
     "            if game_over: break\n",
     "                \n",
     "        print(two_eps_list)\n",
+    "        print(two_eps_list)\n",
+    "\n",
     "        sys.exit()\n",
     "\n",
     "        V[next_observation] = 0 if not next_observation in V else V[next_observation] \n",
