Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -47,11 +47,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T22:27:55.171466Z",
-     "start_time": "2019-03-21T22:27:55.124350Z"
+     "end_time": "2019-03-21T22:29:25.411941Z",
+     "start_time": "2019-03-21T22:29:25.375727Z"
     },
     "code_folding": [
      0,
@@ -271,10 +271,11 @@
     "            action_to_take = sample_policy(observation)\n",
     "            next_observation,reward,game_over,_ = env.step(action_to_take)\n",
     "            two_rwd_list.append(reward)\n",
+    "            observation    = next_observation\n",
     "            if game_over: break\n",
     "                \n",
-    "        print(two_eps_list)\n",
-    "        print(two_eps_list)\n",
+    "        print(two_rwd_list)\n",
+    "        print(next_observation)\n",
     "\n",
     "        sys.exit()\n",
     "\n",
@@ -295,11 +296,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T22:27:56.562582Z",
-     "start_time": "2019-03-21T22:27:56.559112Z"
+     "end_time": "2019-03-21T22:29:25.679764Z",
+     "start_time": "2019-03-21T22:29:25.676760Z"
     },
     "code_folding": [
      0
@@ -317,11 +318,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T22:28:12.535031Z",
-     "start_time": "2019-03-21T22:28:12.529102Z"
+     "end_time": "2019-03-21T22:29:26.471963Z",
+     "start_time": "2019-03-21T22:29:26.466505Z"
     }
    },
    "outputs": [
@@ -329,8 +330,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(14, 5, False), (17, 5, False)]\n",
-      "[0, 0]\n"
+      "(12, 5, False)\n",
+      "(14, 5, False)\n",
+      "[0, 0]\n",
+      "(15, 5, False)\n"
      ]
     },
     {
@@ -340,14 +343,6 @@
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[1;31mSystemExit\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Miniconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3275: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
