Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -274,6 +274,7 @@
     "            observation    = next_observation\n",
     "            if game_over: break\n",
     "                \n",
+    "        V[next_observation] = 0 if not next_observation in V else V[next_observation] \n",
     "        print(two_rwd_list)\n",
     "        print(next_observation)\n",
     "\n",
