Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -275,6 +275,7 @@
     "            if game_over: break\n",
     "                \n",
     "        V[next_observation] = 0 if not next_observation in V else V[next_observation] \n",
+    "        V[observation] = V[observation] + step_size*(reward +step_size*V[next_observation] - V[observation])\n",
     "        print(two_rwd_list)\n",
     "        print(next_observation)\n",
     "\n",
