Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -264,7 +264,7 @@
     "        \n",
     "        observation    = env.reset()\n",
     "        two_rwd_list   = []\n",
-    "        V[observation] = 0\n",
+    "        V[observation] = 0 if not next_observation in V else V[next_observation] \n",
     "        \n",
     "        for _ in range(2):\n",
     "            print(observation)\n",
