Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -47,11 +47,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T22:29:25.411941Z",
-     "start_time": "2019-03-21T22:29:25.375727Z"
+     "end_time": "2019-03-21T22:36:46.565037Z",
+     "start_time": "2019-03-21T22:36:46.529300Z"
     },
     "code_folding": [
      0,
@@ -275,10 +275,8 @@
     "            observation    = next_observation\n",
     "            if game_over: break\n",
     "                \n",
-    "        V[next_observation] = 0 if not next_observation in V else V[next_observation] \n",
-    "        V[observation] = V[observation] + step_size*(reward +step_size*V[next_observation] - V[observation])\n",
+    "        print(two_eps_list)\n",
     "        print(two_rwd_list)\n",
-    "        print(next_observation)\n",
     "\n",
     "        sys.exit()\n",
     "\n",
@@ -299,11 +297,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T22:29:25.679764Z",
-     "start_time": "2019-03-21T22:29:25.676760Z"
+     "end_time": "2019-03-21T22:36:47.002615Z",
+     "start_time": "2019-03-21T22:36:46.998646Z"
     },
     "code_folding": [
      0
@@ -321,11 +319,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T22:29:26.471963Z",
-     "start_time": "2019-03-21T22:29:26.466505Z"
+     "end_time": "2019-03-21T22:36:47.274089Z",
+     "start_time": "2019-03-21T22:36:47.267144Z"
     }
    },
    "outputs": [
@@ -333,10 +331,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(12, 5, False)\n",
-      "(14, 5, False)\n",
-      "[0, 0]\n",
-      "(15, 5, False)\n"
+      "[(14, 10, False)]\n",
+      "[-1]\n"
      ]
     },
     {
