--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -47,11 +47,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T22:36:46.565037Z",
-     "start_time": "2019-03-21T22:36:46.529300Z"
+     "end_time": "2019-03-21T22:36:50.356979Z",
+     "start_time": "2019-03-21T22:36:50.325719Z"
     },
     "code_folding": [
      0,
@@ -263,6 +263,7 @@
     "    for _ in range(num_episodes):\n",
     "        \n",
     "        observation    = env.reset()\n",
+    "        print(\"Startgin\")\n",
     "        two_rwd_list   = []\n",
     "        two_eps_list   = []\n",
     "        V[observation] = 0 if not observation in V else V[observation] \n",
@@ -297,11 +298,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T22:36:47.002615Z",
-     "start_time": "2019-03-21T22:36:46.998646Z"
+     "end_time": "2019-03-21T22:36:50.665673Z",
+     "start_time": "2019-03-21T22:36:50.662188Z"
     },
     "code_folding": [
      0
@@ -319,11 +320,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T22:36:47.274089Z",
-     "start_time": "2019-03-21T22:36:47.267144Z"
+     "end_time": "2019-03-21T22:36:58.723485Z",
+     "start_time": "2019-03-21T22:36:58.718028Z"
     }
    },
    "outputs": [
@@ -331,8 +332,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(14, 10, False)]\n",
-      "[-1]\n"
+      "[(16, 10, False), (18, 10, False)]\n",
+      "[0, -1]\n"
      ]
     },
     {
