Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -47,11 +47,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T22:36:50.356979Z",
-     "start_time": "2019-03-21T22:36:50.325719Z"
+     "end_time": "2019-03-21T22:37:26.505335Z",
+     "start_time": "2019-03-21T22:37:26.466611Z"
     },
     "code_folding": [
      0,
@@ -263,12 +263,13 @@
     "    for _ in range(num_episodes):\n",
     "        \n",
     "        observation    = env.reset()\n",
-    "        print(\"Startgin\")\n",
+    "        print(\"Starting: \",observation)\n",
     "        two_rwd_list   = []\n",
     "        two_eps_list   = []\n",
     "        V[observation] = 0 if not observation in V else V[observation] \n",
     "        \n",
     "        for _ in range(2):\n",
+    "            print(7)\n",
     "            two_eps_list.append(observation)\n",
     "            action_to_take = sample_policy(observation)\n",
     "            next_observation,reward,game_over,_ = env.step(action_to_take)\n",
@@ -298,11 +299,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T22:36:50.665673Z",
-     "start_time": "2019-03-21T22:36:50.662188Z"
+     "end_time": "2019-03-21T22:37:26.749098Z",
+     "start_time": "2019-03-21T22:37:26.745610Z"
     },
     "code_folding": [
      0
@@ -320,11 +321,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T22:36:58.723485Z",
-     "start_time": "2019-03-21T22:36:58.718028Z"
+     "end_time": "2019-03-21T22:37:27.175624Z",
+     "start_time": "2019-03-21T22:37:27.169673Z"
     }
    },
    "outputs": [
@@ -332,8 +333,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(16, 10, False), (18, 10, False)]\n",
-      "[0, -1]\n"
+      "Starting:  (20, 10, False)\n",
+      "7\n",
+      "[(20, 10, False)]\n",
+      "[1]\n"
      ]
     },
     {
