Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -47,11 +47,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T22:37:26.505335Z",
-     "start_time": "2019-03-21T22:37:26.466611Z"
+     "end_time": "2019-03-21T22:37:32.157155Z",
+     "start_time": "2019-03-21T22:37:32.111523Z"
     },
     "code_folding": [
      0,
@@ -268,7 +268,7 @@
     "        two_eps_list   = []\n",
     "        V[observation] = 0 if not observation in V else V[observation] \n",
     "        \n",
-    "        for _ in range(2):\n",
+    "        for _ in range(3):\n",
     "            two_eps_list.append(observation)\n",
     "            action_to_take = sample_policy(observation)\n",
     "            next_observation,reward,game_over,_ = env.step(action_to_take)\n",
@@ -298,11 +298,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T22:37:26.749098Z",
-     "start_time": "2019-03-21T22:37:26.745610Z"
+     "end_time": "2019-03-21T22:37:32.422464Z",
+     "start_time": "2019-03-21T22:37:32.418984Z"
     },
     "code_folding": [
      0
@@ -320,11 +320,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T22:37:27.175624Z",
-     "start_time": "2019-03-21T22:37:27.169673Z"
+     "end_time": "2019-03-21T22:37:41.786293Z",
+     "start_time": "2019-03-21T22:37:41.779873Z"
     }
    },
    "outputs": [
@@ -332,10 +332,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting:  (20, 10, False)\n",
-      "7\n",
-      "[(20, 10, False)]\n",
-      "[1]\n"
+      "Starting:  (12, 6, False)\n",
+      "[(12, 6, False), (17, 6, False)]\n",
+      "[0, -1]\n"
      ]
     },
     {
