Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -320,11 +320,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 53,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T22:37:41.786293Z",
-     "start_time": "2019-03-21T22:37:41.779873Z"
+     "end_time": "2019-03-21T22:37:54.846865Z",
+     "start_time": "2019-03-21T22:37:54.841934Z"
     }
    },
    "outputs": [
@@ -332,9 +332,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting:  (12, 6, False)\n",
-      "[(12, 6, False), (17, 6, False)]\n",
-      "[0, -1]\n"
+      "Starting:  (13, 1, False)\n",
+      "[(13, 1, False), (17, 1, False), (20, 1, False)]\n",
+      "[0, 0, 1]\n"
      ]
     },
     {
