Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -276,6 +276,8 @@
     "            observation    = next_observation\n",
     "            if game_over: break\n",
     "                \n",
+    "        V[two_eps_list[]] = 0 if not next_observation in V else V[next_observation] \n",
+    "\n",
     "        print(two_eps_list)\n",
     "        print(two_rwd_list)\n",
     "\n",
