Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -277,6 +277,7 @@
     "            if game_over: break\n",
     "                \n",
     "        V[two_eps_list[-1]] = 0 if not two_eps_list[-1] in V else V[two_eps_list[-1]] \n",
+    "        V[two_eps_list[0]] = V[observation] + step_size*(reward +step_size*V[next_observation] - V[observation])\n",
     "\n",
     "        print(two_eps_list)\n",
     "        print(two_rwd_list)\n",
