Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -357,7 +357,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "temp=[1,2]\n",
+    "for index, element in enumerate()"
+   ]
   },
   {
    "cell_type": "code",
