Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -354,12 +354,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 58,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-21T22:42:36.600041Z",
+     "start_time": "2019-03-21T22:42:36.595558Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1\n",
+      "1 2\n"
+     ]
+    }
+   ],
    "source": [
     "temp=[1,2]\n",
-    "for index, element in enumerate()"
+    "for index, element in enumerate(temp):\n",
+    "    print(index,element)\n",
+    "    \n",
+    "print(sum())"
    ]
   },
   {
