Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -376,7 +376,7 @@
     "for index, element in enumerate(temp):\n",
     "    print(index,element)\n",
     "    \n",
-    "print(sum())"
+    "print(sum(index,_ for in enumerate(temp)))"
    ]
   },
   {
